packages/scaml.1.2.0/tests/fail/app_vote_type.ml
type t = App_vote.storage

